# ehya-marina-ai-agent-

./: .dockerignore  .envrc  .gitignore  Dockerfile  README.md  Technical Reference.html  docker-compose.dev.yaml  draf.txt  draft.txt  flake.nix  prompt-draft-1.txt  prompt-draft-2.txt  pyproject.toml  requirements.txt  server.py
.github/workflows/: mirror.yml
LiveAPI/: test.py
app/: main.py
app/agents/: agent_setup.py
app/api/: agent_wrapper.py  client.py  old_api_server.py  server.py  swagger_usage.md
app/core/: config.py  prompts.py
app/services/: live_api_bridge.py  tts_utils.py
app/tools/: tools.py
data/: leads.csv
drafts/: draft.txt  test_prompt.txt
src/: config.py  main.py
src/agents/: live_agent.py  voomi_agent.py
src/ai/agents/: live.py  voomi.py
src/ai/prompts/: live.py  v_agent.py
src/ai/tools/: __init__.py
src/ai/tools/data/: leads.csv
src/db/: __init__.py  chat.py  service.py
src/prompts/: live_prompt.py  voomi_prompt.py
src/tools/: __init__.py  lead_management.py  project_units_tool.py  property_search.py  response_formatter.py  units_fetcher.py
src/tools/tool_outputs/: leads.csv
src/utils/: audio_codec.py  message_accumulator.py
